# django_stripe

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
dj_stripe/: asgi.py  settings.py  urls.py  wsgi.py
product/: admin.py  models.py  views.py
product/migrations/: 0001_initial.py  0002_alter_item_price.py  0003_discount_tax_item_currency_order.py  0004_remove_tax_amount_tax_inclusive_tax_percentage_and_more.py  0005_remove_discount_amount_discount_duration_and_more.py
templates/: 404.html  cancel.html  home.html  landing_item.html  landing_order.html  success.html
