[tool.poetry]
name = "django-stripe"
version = "0.1.0"
description = ""
authors = ["Даниил Балабанов <spacewalrus@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
python-dotenv = "^1.0.0"
flake8 = "^6.1.0"
stripe = "^7.10.0"
django-extensions = "^3.2.3"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
